scaling/network-policy/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata: 
      labels: 
        app: web
    spec:
      containers:
        - name: web
          image: nginx
          resources:
            requests:
              cpu: "100m"
              memory: "10Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          ports: 
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
---
