scaling/network-policy/np-allow-access-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: rohith-access-web
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels: 
              access: web
      ports:
        - port: 80
          protocol: TCP
